deploy/infra/terraform/ingress/ingress.yaml


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "star-dev-geocube-airbusds-geo-com"
    networking.gke.io/managed-certificates: example-certificate,example-certificate-2
spec:
  rules:
  - host: test.dev.geocube.airbusds-geo.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 8080
  - host: test2.dev.geocube.airbusds-geo.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  type: NodePort
  
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  selector:
    matchLabels:
      run: web
  template:
    metadata:
      labels:
        run: web
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: IfNotPresent
        name: web
        ports:
        - containerPort: 8080
          protocol: TCP
